maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:12: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      if (aBiscuit(i,j)) {return {i;j}}
                                  ^JediEscaper:12: error: type mismatch;
 found   : Int
 required: Array[Int]
      if (aBiscuit(i,j)) {return {i;j}}
                                    ^JediEscaper:10: error: type mismatch;
 found   : Unit
 required: Array[Int]
  for (i <- 0 to x-1) {
         ^